app store ready + oauth2 fix

--- a/drivers/thermostat/pair/start.html
+++ b/drivers/thermostat/pair/start.html
@@ -1,47 +1,35 @@
 <script type="text/javascript">
+var auth_dialog;
+
 Homey.setTitle( __('pair.start.title') );
 
-Homey.emit('start', function(opts){
-	
-	var redirect_uri = window.location.href;
-	
-	document.getElementById('oauth').src = 'https://api.thermosmart.com/oauth2/authorize?response_type=code&client_id=' + opts.client_id + '&redirect_uri=' + redirect_uri;
-	
-	document.getElementById('oauth').onload = function(){
-		var queryString = document.getElementById('oauth').contentWindow.location.search;
-			queryString = queryString.substring(1);
-			queryString = parseQueryString( queryString );			
-		
-		Homey.emit('authorized', {
-			code: queryString.code,
-			redirect_uri: redirect_uri
-		}, function( result ){
-			
-			if( result === true ) {
-				Homey.showView('list_devices');
-			} else {
-				alert('Something went wrong!');
-			}
-			
-		});
-	}
+Homey.emit('start', function( err, url ){
+
 	
 });
+
+Homey.on('url', function( url ){
 	
-function parseQueryString( queryString ) {
-    var params = {}, queries, temp, i, l;
- 
-    // Split into key/value pairs
-    queries = queryString.split("&");
- 
-    // Convert the array of strings into an object
-    for ( i = 0, l = queries.length; i < l; i++ ) {
-        temp = queries[i].split('=');
-        params[temp[0]] = temp[1];
-    }
- 
-    return params;
-};
+	var width	= 400;
+	var height	= 400;
+	var left	= (screen.width/2)-(width/2);
+	var top		= (screen.height/2)-(height/2);
+	
+	console.log(left, top)
+	
+	auth_dialog = window.open(url, "auth_dialog", "width=" + width + ", height=" + height + ", left=" + left + ", top=" + top + ", menubar=no, status=no, toolbar=no");
+})
+
+Homey.on('authorized', function( success ){
+		
+	if( success ) {
+		auth_dialog.close();
+		Homey.showView('list_devices');
+	} else {
+		alert("Something went wrong!");
+		Homey.done();
+	}
+})
 </script>
 
 <iframe id="oauth" width="100%" height="100%"></iframe>
