--- a/drivers/thermostat/pair/start.html
+++ b/drivers/thermostat/pair/start.html
@@ -3,10 +3,7 @@ var auth_dialog;
 
 Homey.setTitle( __('pair.start.title') );
 
-Homey.emit('start', function( err, url ){
-
-	
-});
+Homey.emit('start');
 
 Homey.on('url', function( url ){
 	
@@ -14,18 +11,17 @@ Homey.on('url', function( url ){
 	var height	= 400;
 	var left	= (screen.width/2)-(width/2);
 	var top		= (screen.height/2)-(height/2);
-	
-	console.log(left, top)
-	
+		
 	auth_dialog = window.open(url, "auth_dialog", "width=" + width + ", height=" + height + ", left=" + left + ", top=" + top + ", menubar=no, status=no, toolbar=no");
 })
 
-Homey.on('authorized', function( success ){
-		
+Homey.on('authorized', function( success, callback ){
+			
+	auth_dialog.close();
+	
 	if( success ) {
-		auth_dialog.close();
 		Homey.showView('list_devices');
-	} else {
+	} else {	
 		alert("Something went wrong!");
 		Homey.done();
 	}
