--- a/drivers/thermostat/pair/start.html
+++ b/drivers/thermostat/pair/start.html
@@ -4,23 +4,21 @@ var auth_dialog;
 Homey.setTitle( __('pair.start.title') );
 
 Homey.on('url', function( url ){
-	
+			
 	var width	= 400;
 	var height	= 400;
 	var left	= (screen.width/2)-(width/2);
 	var top		= (screen.height/2)-(height/2);
 		
-	auth_dialog = window.open(url, "auth_dialog", "width=" + width + ", height=" + height + ", left=" + left + ", top=" + top + ", menubar=no, status=no, toolbar=no");
+	Homey.popup(url);
 })
 
 Homey.on('authorized', function( success, callback ){
-			
-	auth_dialog.close();
-	
+		
 	if( success ) {
 		Homey.showView('list_devices');
 	} else {	
-		alert("Something went wrong!");
+		Homey.alert("Something went wrong!", 'error');
 		Homey.done();
 	}
 })
