--- a/drivers/thermostat/pair/start.html
+++ b/drivers/thermostat/pair/start.html
@@ -4,22 +4,24 @@ var auth_dialog;
 Homey.setTitle( __('pair.start.title') );
 
 Homey.on('url', function( url ){
-			
+
 	var width	= 400;
 	var height	= 400;
 	var left	= (screen.width/2)-(width/2);
 	var top		= (screen.height/2)-(height/2);
-		
+
 	Homey.popup(url);
 })
 
 Homey.on('authorized', function( success, callback ){
-		
+
 	if( success ) {
 		Homey.showView('list_devices');
-	} else {	
+	} else {
 		Homey.alert("Something went wrong!", 'error');
 		Homey.done();
 	}
 })
+
+Homey.emit('start');
 </script>
