add pause condition

--- a/drivers/thermostat/pair/start.html
+++ b/drivers/thermostat/pair/start.html
@@ -23,5 +23,9 @@ Homey.on('authorized', function( success, callback ){
 	}
 })
 
+Homey.on('error', function( err ){
+	Homey.alert( err, 'error' );
+})
+
 Homey.emit('start');
 </script>
